--- a/app/src/main/res/layout/layout_classroom_panel.xml
+++ b/app/src/main/res/layout/layout_classroom_panel.xml
@@ -72,7 +72,7 @@
                     android:src="@drawable/ic_cr_start"/>
 
             <ImageView
-                    android:id="@+id/exit_btn"
+                    android:id="@+id/finish_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
