--- a/app/src/main/res/layout/layout_moment_header.xml
+++ b/app/src/main/res/layout/layout_moment_header.xml
@@ -10,6 +10,7 @@
             android:layout_centerInParent="true"
             app:oval="true"
             android:src="@drawable/default_avatar"
+            android:scaleType="fitXY"
             android:layout_width="@dimen/px90"
             android:layout_height="@dimen/px90"/>
 
