1.增加搜索页到个人主页的跳转 2.修改个人主页下拉刷新的bug

--- a/app/src/main/res/layout/fragment_tab_base_list.xml
+++ b/app/src/main/res/layout/fragment_tab_base_list.xml
@@ -7,6 +7,7 @@
         android:layout_height="match_parent"
         android:scrollbars="none"
         android:divider="@color/main_bg"
+        android:background="@android:color/transparent"
         android:listSelector="@android:color/transparent"
         android:dividerHeight="@dimen/px1"
         android:orientation="vertical"/>
