--- a/app/src/main/res/layout/activity_confirm_enrollment.xml
+++ b/app/src/main/res/layout/activity_confirm_enrollment.xml
@@ -10,7 +10,8 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/px90"
             android:background="@color/white"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingTop="@dimen/px32">
 
         <ImageView
                 android:id="@+id/back_btn"
@@ -55,12 +56,14 @@
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/px22"
             android:paddingRight="@dimen/px22"
-            android:layout_below="@+id/head_layout">
+            android:layout_below="@+id/head_layout"
+            android:background="@color/white">
 
         <ImageView
                 android:id="@+id/lesson_cover"
                 android:layout_width="@dimen/px260"
-                android:layout_height="@dimen/px148"/>
+                android:layout_height="@dimen/px148"
+                android:layout_marginRight="@dimen/px22"/>
 
         <TextView
                 android:id="@+id/lesson_title"
@@ -81,13 +84,13 @@
                 android:layout_marginTop="@dimen/px22"
                 android:orientation="horizontal">
 
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/lesson_begin_time"
-                    android:textSize="@dimen/font_26px"
-                    android:layout_below="@id/lesson_title"
-                    android:textColor="@color/common_text"/>
+            <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="@string/lesson_begin_time"-->
+                    <!--android:textSize="@dimen/font_26px"-->
+                    <!--android:layout_below="@id/lesson_title"-->
+                    <!--android:textColor="@color/common_text"/>-->
 
             <TextView
                     android:id="@+id/lesson_begin_time"
@@ -119,7 +122,8 @@
         <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/lesson_line">
+                android:layout_below="@+id/lesson_line"
+                android:layout_marginBottom="@dimen/px32">
 
             <TextView
                     android:id="@+id/lesson_money"
@@ -156,7 +160,7 @@
                 android:id="@+id/bottom_line"
                 style="@style/DividerHorizontal"
                 android:layout_marginTop="@dimen/px32"
-                android:layout_marginBottom="@dimen/px32"/>
+                />
 
         <LinearLayout
                 android:id="@+id/price_info"
@@ -165,7 +169,8 @@
                 android:paddingLeft="@dimen/px50"
                 android:paddingRight="@dimen/px50"
                 android:orientation="vertical"
-                android:layout_below="@+id/bottom_line">
+                android:layout_below="@+id/bottom_line"
+                android:background="@color/white">
 
             <TextView
                     android:id="@+id/pay_price"
@@ -173,14 +178,16 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/font_red"
                     android:textStyle="bold"
-                    android:textSize="@dimen/font_28px"/>
+                    android:textSize="@dimen/font_40px"/>
 
             <TextView
                     android:id="@+id/discount_price"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/font_gray"
-                    android:textSize="@dimen/font_24px"/>
+                    android:textSize="@dimen/font_24px"
+                    android:gravity="center_horizontal"
+                    />
         </LinearLayout>
 
         <TextView
