--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -120,4 +120,10 @@
         <item>部分人</item>
         <item>仅自己可见</item>
     </string-array>
+
+    <string-array name="chat_setting">
+        <item>接收消息，并提醒我</item>
+        <item>接收消息，但不提醒我</item>
+        <item>不接收任何消息</item>
+    </string-array>
 </resources>
