--- a/app/src/main/res/layout/activity_lession_detail.xml
+++ b/app/src/main/res/layout/activity_lession_detail.xml
@@ -259,8 +259,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:orientation="horizontal"
-                    android:background="@drawable/lesson_home_lay_bg"
-                    android:visibility="gone">
+                    android:background="@drawable/lesson_home_lay_bg">
 
                 <Button
                         android:id="@+id/consulting"
