--- a/app/src/main/res/layout/activity_share_scope.xml
+++ b/app/src/main/res/layout/activity_share_scope.xml
@@ -1,11 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ListView
-            android:id="@+id/lv"
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
+            android:orientation="vertical"
+            >
+        <TextView
+                android:id="@+id/tips"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/closed_tips"
+                android:textSize="@dimen/px32"
+                android:textColor="@color/common_text"
+                android:padding="10dp"
+                android:drawableLeft="@drawable/ic_tips"
+                android:visibility="gone"/>
+        <ListView
+                android:id="@+id/lv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                />
+    </LinearLayout>
+
 
     <include
             android:id="@+id/v_empty"
