--- a/app/src/main/res/layout/activity_confirm_enrollment.xml
+++ b/app/src/main/res/layout/activity_confirm_enrollment.xml
@@ -56,8 +56,11 @@
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/px22"
             android:paddingRight="@dimen/px22"
+            android:layout_marginTop="1dp"
             android:layout_below="@+id/head_layout"
-            android:background="@color/white">
+            android:background="@color/white"
+            android:paddingTop="10dp"
+            >
 
         <ImageView
                 android:id="@+id/lesson_cover"
