--- a/app/src/main/res/layout/layout_common_dialog.xml
+++ b/app/src/main/res/layout/layout_common_dialog.xml
@@ -5,32 +5,49 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
 
-    <TextView
-            android:id="@+id/common_dialog_title"
-            android:textColor="@color/font_black"
-            android:textSize="@dimen/font_36px"
-            android:layout_marginTop="@dimen/px60"
-            android:textStyle="bold"
-            android:gravity="center"
+    <FrameLayout
+            android:id="@+id/common_dialog_normal_wrapper"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content">
 
-    <TextView
-            android:id="@+id/common_dialog_desc"
-            android:textColor="@color/font_black"
-            android:textSize="@dimen/font_28px"
-            android:layout_marginTop="@dimen/px30"
-            android:layout_marginLeft="@dimen/px30"
-            android:layout_marginRight="@dimen/px30"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+        <RelativeLayout
+                android:layout_marginTop="@dimen/px50"
+                android:layout_marginBottom="@dimen/px50"
+                android:layout_marginLeft="@dimen/px30"
+                android:layout_marginRight="@dimen/px30"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <TextView
+                    android:id="@+id/common_dialog_title"
+                    android:textColor="@color/font_black"
+                    android:textSize="@dimen/font_36px"
+                    android:textStyle="bold"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            <TextView
+                    android:id="@+id/common_dialog_desc"
+                    android:textColor="@color/font_black"
+                    android:textSize="@dimen/font_28px"
+                    android:layout_below="@+id/common_dialog_title"
+                    android:layout_marginTop="@dimen/px30"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+        </RelativeLayout>
+    </FrameLayout>
+
 
     <FrameLayout
             android:id="@+id/common_dialog_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/px30"/>
+            android:visibility="gone"
+            android:paddingLeft="@dimen/px30"
+            android:paddingRight="@dimen/px30"
+            android:paddingBottom="@dimen/px30"/>
 
     <View
             style="@style/DividerHorizontal"
