--- a/app/src/main/res/layout/activity_global_search.xml
+++ b/app/src/main/res/layout/activity_global_search.xml
@@ -211,13 +211,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-            <TextView
-                    android:text="暂无结果～"
-                    android:textSize="@dimen/font_28px"
-                    android:textColor="@color/common_text"
-                    android:layout_gravity="center"
+            <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="vertical">
+
+                <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_search_empty"/>
+
+                <TextView
+                        android:text="暂无搜索结果～"
+                        android:textSize="@dimen/font_28px"
+                        android:textColor="@color/common_text"
+                        android:layout_marginTop="@dimen/px30"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
+
         </FrameLayout>
     </RelativeLayout>
 
