--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -74,5 +74,5 @@
             android:layout_marginLeft="@dimen/px30"
             android:layout_marginRight="@dimen/px30"
             android:layout_marginTop="@dimen/px90"
-            android:text="关注他，发消息"/>
+            android:text="@string/follow_and_send_message"/>
 </LinearLayout>
