1.我授的课，点击+按钮直接跳转到创建直播课页面 2.创建直播课去掉按课时收费 3.修改促销页面折扣第一个字符为"."的crash

--- a/app/src/main/res/layout/fragment_live_lesson_creation.xml
+++ b/app/src/main/res/layout/fragment_live_lesson_creation.xml
@@ -235,7 +235,8 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:layout_marginTop="@dimen/px20"
-                        android:gravity="center_vertical">
+                        android:gravity="center_vertical"
+                        android:visibility="gone">
 
                     <TextView
                             android:id="@+id/by_duration_title"
