--- a/app/src/main/res/layout/activity_lession_detail.xml
+++ b/app/src/main/res/layout/activity_lession_detail.xml
@@ -177,12 +177,11 @@
 
                 <cn.xiaojs.xma.ui.widget.RoundedImageView
                         android:id="@+id/tea_avatar"
-                        app:oval="true"
                         android:layout_width="@dimen/px120"
                         android:layout_height="@dimen/px120"
                         android:layout_marginRight="@dimen/px24"
-                        android:scaleType="fixXY"
-                        android:src="@drawable/default_avatar"/>
+                        android:src="@drawable/default_avatar"
+                        app:oval="true"/>
 
                 <ImageView
                         android:id="@+id/nav_right"
