--- a/app/src/main/res/layout/activity_classroom.xml
+++ b/app/src/main/res/layout/activity_classroom.xml
@@ -10,6 +10,7 @@
             android:layout_height="wrap_content"
             android:background="@color/classroom_white_bg">
 
+        <!--直播视频view-->
         <cn.xiaojs.xma.ui.classroom.live.view.PlayerTextureView
                 android:id="@+id/live_video"
                 android:layout_width="match_parent"
@@ -17,6 +18,7 @@
                 android:layout_gravity="center"
                 android:visibility="gone"/>
 
+        <!--推流视频view-->
         <cn.xiaojs.xma.ui.classroom.live.view.LiveRecordView
                 android:id="@+id/publish_video"
                 android:layout_width="match_parent"
