--- a/app/src/main/res/layout/layout_contact_choice_child.xml
+++ b/app/src/main/res/layout/layout_contact_choice_child.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <cn.xiaojs.xma.ui.widget.CheckableLinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:swipe="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -23,7 +24,9 @@
             android:layout_width="@dimen/contact_thumbnail_size"
             android:layout_height="@dimen/contact_thumbnail_size"
             android:src="@drawable/default_avatar"
-            android:layout_marginLeft="20dp"/>
+            android:layout_marginLeft="20dp"
+            android:scaleType="fitXY"
+            />
 
     <TextView
             android:id="@+id/contact_name"
