--- a/app/src/main/res/layout/layout_contact_group_child.xml
+++ b/app/src/main/res/layout/layout_contact_group_child.xml
@@ -43,12 +43,11 @@
             android:paddingRight="10dp"
             android:layout_marginLeft="10dp"
             >
-        <cn.xiaojs.xma.ui.widget.RoundedImageView
+        <ImageView
                 android:id="@+id/contact_avatar"
                 android:layout_width="@dimen/contact_thumbnail_size"
                 android:layout_height="@dimen/contact_thumbnail_size"
                 android:scaleType="fitXY"
-                swipe:oval="true"
                 />
         <TextView
                 android:id="@+id/contact_name"
