修改录制视频打不开摄像头的问题

--- a/app/src/main/res/layout/layout_classroom_panel.xml
+++ b/app/src/main/res/layout/layout_classroom_panel.xml
@@ -267,6 +267,7 @@
                     android:layout_marginLeft="@dimen/px12"
                     android:layout_marginRight="@dimen/px12"
                     android:maxHeight="@dimen/px2"
+                    android:minHeight="@dimen/px2"
                     android:thumbOffset="@dimen/px7"
                     android:foregroundGravity="center_vertical"
                     android:thumb="@null"
