--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -75,12 +75,13 @@
     <color name="translucent_30">#6f000000</color>
     <color name="search_gray">#bfbfbf</color>
     <color name="common_text">#8a8a8a</color>
-    <color name="course_state_on">#b8f986</color>
-    <color name="course_state_cancel">#bbbbbb</color>
-    <color name="course_state_stop">#ff0000</color>
+    <color name="course_state_on">#0066ff</color>
+    <color name="course_state_cancel">#cccccc</color>
+    <color name="course_state_stop">#aaaaaa</color>
     <color name="course_state_end">#999999</color>
-    <color name="course_state_draft">#6699ff</color>
-    <color name="course_state_examine">#66cccc</color>
+    <color name="course_state_draft">#66cccc</color>
+    <color name="course_state_examine">#cc66cc</color>
+    <color name="course_state_examine_failed">#ff0033</color>
     <color name="course_item_stroke_line">#eff2f6</color>
     <color name="common_btn_white_bg_press">#ffd7d7db</color>
     <color name="moment_write_comment_bg">#ebecf0</color>
