--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -388,6 +388,44 @@
                     android:src="@drawable/ic_entrance"/>
         </RelativeLayout>
 
+        <View
+                style="@style/DividerHorizontal2"/>
+
+        <!--我的订单-->
+        <RelativeLayout
+                android:id="@+id/my_order_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/MinePageItem">
+
+            <TextView
+                    android:layout_alignParentLeft="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/font_black"
+                    android:textSize="@dimen/px26"
+                    android:textStyle="bold"
+                    android:drawableLeft="@drawable/ic_my_order"
+                    android:drawablePadding="@dimen/px20"
+                    android:text="@string/my_order"/>
+
+            <TextView
+                    android:id="@+id/my_order"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@+id/enter_my_order"
+                    android:textColor="@color/font_black"
+                    android:textSize="@dimen/px26"
+                    android:layout_marginRight="@dimen/px20"/>
+
+            <ImageView
+                    android:id="@+id/enter_my_order"
+                    android:layout_alignParentRight="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_entrance"/>
+        </RelativeLayout>
+
 
         <!--教学能力-->
         <RelativeLayout
