--- a/app/src/main/res/layout/layout_base_header.xml
+++ b/app/src/main/res/layout/layout_base_header.xml
@@ -35,7 +35,7 @@
             android:textSize="@dimen/font_34px"
             android:textStyle="bold"
             android:layout_centerInParent="true"
-            android:textColor="@color/def"/>
+            android:textColor="@color/font_black"/>
 
     <TextView
             android:id="@+id/right_view"
