--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -373,4 +373,20 @@
         <item name="android:minHeight">@dimen/drop_down_list_header_progress_bar_height</item>
         <item name="android:maxHeight">@dimen/drop_down_list_header_progress_bar_height</item>
     </style>
+
+    <style name="dlg_upgrade" parent="android:style/Theme.Dialog">
+
+        <!-- 屏幕背景变暗 -->
+        <item name="android:backgroundDimEnabled">true</item>
+        <!-- 半透明 -->
+        <item name="android:windowIsTranslucent">true</item>
+        <!-- 无标题 -->
+        <item name="android:windowNoTitle">true</item>
+        <!-- 边框 -->
+        <item name="android:windowFrame">@null</item>
+        <!-- 背景透明 -->
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <!--<item name="android:windowCloseOnTouchOutside">false</item>-->
+        <!--<item name="android:windowAnimationStyle">@style/quick</item>-->
+    </style>
 </resources>
